if(APPLE)
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -I/opt/local/include")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -I/opt/local/include")
set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -L/opt/local/lib")
endif(APPLE)

add_subdirectory(pfm)
#add_subdirectory(qtguiapplication)
#add_subdirectory(gda)
add_subdirectory(ga_image)
#add_subdirectory(gad)
#add_subdirectory(geoaidalib)
