####### kdevelop will overwrite this part!!! (begin)##########
noinst_LIBRARIES = libcore.a

## INCLUDES were found outside kdevelop specific part

libcore_a_METASOURCES = AUTO

libcore_a_SOURCES = geoimagecache.cpp fatalerror.cpp cleanup.cpp geoimagelist.cpp geoimage.cpp judge.cpp analysis.cpp attribute.cpp task.cpp operatorlist.cpp operator.cpp gnode.cpp inode.cpp semnet.cpp snode.cpp 
KDE_OPTIONS = qtonly


EXTRA_DIST = snode.cpp snode.h semnet.cpp semnet.h inode.cpp inode.h gnode.cpp gnode.h operator.cpp operator.h operatorlist.cpp operatorlist.h task.cpp task.h attribute.cpp attribute.h analysis.cpp analysis.h judge.cpp judge.h geoimage.cpp geoimage.h geoimagelist.cpp geoimagelist.h cleanup.cpp cleanup.h fatalerror.cpp fatalerror.h geoimagecache.cpp geoimagecache.h 

####### kdevelop will overwrite this part!!! (end)############
INCLUDES = -DWITH_GUI_SUPPORT -DTMPDIR=\"@prefix@/tmp\" -I$(top_srcdir)/gda/semnetgui $(all_includes)
